# bt-proxy

./: Dockerfile  README.md  bt-proxy.service  pyproject.toml
.github/workflows/: docker.yml
bt_proxy/: __init__.py  __main__.py  api_server.py  ble_manager.py  proto.py
