[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt-proxy"
version = "0.1.0"
description = "ESPHome-compatible Bluetooth Proxy for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "bleak>=0.21.0",
    "zeroconf>=0.80.0",
]

[project.scripts]
bt-proxy = "bt_proxy.__main__:main"

[tool.setuptools.packages.find]
include = ["bt_proxy*"]
